--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -1,1 +1,17 @@
-<Button text="Open Camera" class="btn btn-primary" [nsRouterLink]="['/camera']" pageTransition="slide" clearHistory="true"></Button>
+<StackLayout class="map-wrapper">
+    <!--
+        Add map here
+    -->
+
+    <Label text="Photos:"></Label>
+
+    <ListView [items]="photosArray" (itemTap)="onItemTap($event)" class="list-group">
+        <ng-template let-photo="item" let-i="index" let-odd="odd" let-even="even">
+            <StackLayout orientation="horizontal" class="list-group-item">
+                <Label [text]="photo.id"></Label>
+            </StackLayout>
+        </ng-template>
+    </ListView>
+
+    <Button class="camera-button" text="Open Camera" class="btn btn-primary" [nsRouterLink]="['/camera']" pageTransition="slide" clearHistory="true"></Button>
+</StackLayout>
