--- a/src/app/views/camera/camera.component.html
+++ b/src/app/views/camera/camera.component.html
@@ -1,1 +1,4 @@
-<Button text="Shoot!" class="btn btn-primary" (click)="shoot()" pageTransition="slide" clearHistory="true"></Button>
+<StackLayout>
+    <Button text="Shoot!" class="btn btn-primary" (tap)="shoot()" pageTransition="slide" clearHistory="true"></Button>
+    <Button text="Back" (tap)="back()"></Button>
+</StackLayout>
