open photo detail on item tap

--- a/src/app/views/details/photo-card/photo-card.component.css
+++ b/src/app/views/details/photo-card/photo-card.component.css
@@ -1,1 +1,7 @@
 /* Add mobile styles for the component here.  */
+.photo-card {
+    margin: 20px;
+    padding: 5px;
+    background: white;
+    border: 1px solid #ccc;
+}
