--- a/src/app/views/details/photo-card/photo-card.component.html
+++ b/src/app/views/details/photo-card/photo-card.component.html
@@ -1,2 +1,2 @@
 <Label text="Photo Card {{photoId}}"></Label>
-<Image *ngIf="photo !== undefined" src="{{photo.url}}" alt="Photo {{photo.id}}"></Image>
+<Image class="photo-card" *ngIf="photo !== undefined" src="{{photo.url}}" alt="Photo {{photo.id}}"></Image>
