update rating pipe, add clear storage button,  add removeFromLocal method

--- a/src/app/views/details/submission-buttons/submission-buttons.component.html
+++ b/src/app/views/details/submission-buttons/submission-buttons.component.html
@@ -1,2 +1,2 @@
-<Button text="Bad!" class="btn btn-primary"></Button>
-<Button text="Good!" class="btn btn-primary"></Button>
+<Button text="Bad!" class="btn btn-primary" (tap)="ratePhoto(0)"></Button>
+<Button text="Good!" class="btn btn-primary" (tap)="ratePhoto(1)"></Button>
