add codelyzer, update tslint

--- a/src/app/views/details/submission-buttons/submission-buttons.component.html
+++ b/src/app/views/details/submission-buttons/submission-buttons.component.html
@@ -1,2 +1,3 @@
 <Button text="Bad!" class="btn btn-primary" (tap)="ratePhoto(0)"></Button>
 <Button text="Good!" class="btn btn-primary" (tap)="ratePhoto(1)"></Button>
+<Button text="Cancel" class="btn btn-primary" (tap)="cancel()"></Button>
