--- a/src/app/views/camera/camera.component.html
+++ b/src/app/views/camera/camera.component.html
@@ -1,3 +1,4 @@
+<ActionBar title="Camera View" class="action-bar"></ActionBar>
 <StackLayout>
     <Button text="Shoot!" class="btn btn-primary" (tap)="shoot()" pageTransition="slide" clearHistory="true"></Button>
     <Button text="Back" (tap)="back()"></Button>
