--- a/src/app/views/details/details.component.html
+++ b/src/app/views/details/details.component.html
@@ -1,3 +1,4 @@
+<ActionBar title="Details View" class="action-bar"></ActionBar>
 <StackLayout class="details-wrapper">
     <Label text="Details" class="h1 text-center" textWrap="true"></Label>
     <ns-photo-card [photoId]="photoId"></ns-photo-card>
