add font awesome

--- a/src/app/views/map/map.component.css
+++ b/src/app/views/map/map.component.css
@@ -4,13 +4,8 @@
 }
 
 .camera-button {
-    margin-top: 30px;
-}
-
-.map-wrapper {
-    height: 80%;
-}
-
-.buttons-wrapper {
-    height: 20%
+    margin: 0 0 30px 30px;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
 }
