--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -1,7 +1,7 @@
 <ActionBar title="Map View" class="action-bar"></ActionBar>
-<StackLayout class="map-wrapper" height="100%">
-    <ContentView height="100%" width="100%">
-        <!--Mapbox
+<GridLayout rows="*,60" class="map-wrapper">
+    <StackLayout row="0">
+        <Mapbox
             #map
             accessToken="pk.eyJ1IjoiYXlvYXljbyIsImEiOiI1YzVic1JvIn0.AnH_wYkYOKMJGmrgGT-A8g"
             mapStyle="traffic_day"
@@ -15,17 +15,28 @@
             disableScroll="false"
             disableTilt="false"
             (mapReady)="onMapReady($event)">
-        </Mapbox-->
+        </Mapbox>
 
-        <ListView class="map-wrapper" [items]="photosArray" (itemTap)="onItemTap($event)" class="list-group">
+        <!--ListView class="map-wrapper" [items]="photosArray" (itemTap)="onItemTap($event)" class="list-group">
             <ng-template let-photo="item" let-i="index" let-odd="odd" let-even="even">
                 <StackLayout orientation="horizontal" class="list-group-item">
                     <Label text="{{photo.rating | rating}}: ({{photo.lat}}, {{photo.lng}})"></Label>
                 </StackLayout>
             </ng-template>
-        </ListView>
-    </ContentView>
+        </ListView-->
+    </StackLayout>
+    <StackLayout row="1" orientation="horizontal">
+        <Button
+            class="camera-button"
+            [nsRouterLink]="['/camera']"
+            pageTransition="slide"
+            clearHistory="true">
 
-    <Button class="camera-button" text="Open Camera" class="btn btn-primary" [nsRouterLink]="['/camera']" pageTransition="slide" clearHistory="true"></Button>
-    <!--Button class="clear-button" text="Clear Storage" class="btn btn-primary" (tap)="clearLocalStorage()"></Button-->
-</StackLayout>
+            <FormattedString>
+                <Span text="&#xf030;" fontFamily="Font Awesome 5 Brands,fa-brands-400"></Span>
+            </FormattedString> 
+
+        </Button>
+        <!--Button class="clear-button" text="Clear Storage" class="btn btn-primary" (tap)="clearLocalStorage()"></Button-->
+    </StackLayout>
+</GridLayout>
