--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -29,7 +29,7 @@
         <Button
             class="camera-button"
             [nsRouterLink]="['/camera']"
-            pageTransition="slide"
+            pageTransition="slideLeft"
             clearHistory="true">
 
             <FormattedString>
