--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -33,7 +33,7 @@
             clearHistory="true">
 
             <FormattedString>
-                <Span text="&#xf030;" fontFamily="Font Awesome 5 Brands,fa-brands-400"></Span>
+                <Span text="Camera" fontFamily="Font Awesome 5 Brands,fa-brands-400"></Span>
             </FormattedString> 
 
         </Button>
