documentation and todo comments

--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -32,6 +32,9 @@
             pageTransition="slideLeft"
             clearHistory="true">
 
+            <!--
+                TODO: use camera icon svg in '~/app/icons/'
+            -->
             <FormattedString>
                 <Span text="Camera" fontFamily="Font Awesome 5 Brands,fa-brands-400"></Span>
             </FormattedString> 
