--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -1,6 +1,6 @@
 <ActionBar title="Map View" class="action-bar"></ActionBar>
-<GridLayout>
-    <MapView #mapView [latitude]="currentLat || latitude" [longitude]="currentLng || longitude"
+<GridLayout rows="*,100">
+    <MapView row="0" #mapView [latitude]="currentLat || latitude" [longitude]="currentLng || longitude"
              [zoom]="zoom" [minZoom]="minZoom" [maxZoom]="maxZoom" [bearing]="bearing"
              [tilt]="tilt" i-padding="50,50,50,50" [padding]="padding" (mapReady)="onMapReady($event)"
              (markerSelect)="onMarkerEvent($event)" (markerBeginDragging)="onMarkerEvent($event)"
@@ -8,6 +8,24 @@
              (markerInfoWindowTapped)="onMarkerEvent($event)" (coordinateTapped)="onCoordinateTapped($event)"
              (cameraChanged)="onCameraChanged($event)"
              (cameraMove)="onCameraMove($event)"></MapView>
+
+    <StackLayout row="1" orientation="horizontal">
+        <Button
+            [nsRouterLink]="['/camera']"
+            width="25%"
+            text="Open Camera"
+            pageTransition="slideLeft"
+            clearHistory="true"
+            class="btn btn-primary">
+        </Button>
+        <Button
+            (tap)="clearPhotosArray()"
+            width="25%"
+            text="Clear"
+            class="btn">
+        </Button>
+    </StackLayout>
+
 </GridLayout>
 <!--GridLayout rows="*,100" class="map-wrapper">
     <StackLayout row="0">
