hidden feature: long press open camera button to clear localstorage

--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -12,6 +12,7 @@
     <StackLayout row="1" orientation="horizontal">
         <Button
             (tap)="openCamera($event)"
+            (onLongPress)="clearPhotosArray()"
             width="100%"
             text="Open Camera"
             clearHistory="true">
