--- a/src/app/views/details/details.component.html
+++ b/src/app/views/details/details.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="Details View" class="action-bar"></ActionBar>
+<ActionBar title="{{appName}}" class="action-bar"></ActionBar>
 <StackLayout class="details-wrapper">
     <ns-photo-card [photoId]="photoId"></ns-photo-card>
     <ns-submission-buttons [photoId]="photoId"></ns-submission-buttons>
