--- a/src/app/views/details/submission-buttons/submission-buttons.component.html
+++ b/src/app/views/details/submission-buttons/submission-buttons.component.html
@@ -1,7 +1,4 @@
-<Button text="Bad!" class="btn btn-primary" (tap)="ratePhoto(0)"></Button>
-<Button text="Good!" class="btn btn-primary" (tap)="ratePhoto(1)"></Button>
-<Button text="Cancel" class="btn btn-primary"
-    [nsRouterLink]="['/map']"
-    pageTransition="slideRight"
-    (tap)="cancel()">
-</Button>
+<StackLayout>
+    <Button text="Bad!" class="bad-btn" (tap)="ratePhoto(0)"></Button>
+    <Button text="Good!" class="good-btn" (tap)="ratePhoto(1)"></Button>
+</StackLayout>
