--- a/src/app/views/details/submission-buttons/submission-buttons.component.css
+++ b/src/app/views/details/submission-buttons/submission-buttons.component.css
@@ -6,9 +6,9 @@
 }
 
 .bad-btn {
-    background: red;
+    background: #ff5c5c;
 }
 
 .good-btn {
-    background: green;
+    background: #7ed957;
 }
