--- a/src/app/views/details/details.component.html
+++ b/src/app/views/details/details.component.html
@@ -1,4 +1,4 @@
-<ActionBar class="app-title" title="{{appName}}" class="action-bar"></ActionBar>
+<ns-action-bar></ns-action-bar>
 <StackLayout rows="*,60" class="details-wrapper">
     <ns-photo-card row="0" [photoId]="photoId"></ns-photo-card>
     <ns-submission-buttons row="1" orientation="horizontal" [photoId]="photoId"></ns-submission-buttons>
