--- a/src/app/views/action-bar/action-bar.component.html
+++ b/src/app/views/action-bar/action-bar.component.html
@@ -2,7 +2,7 @@
   <StackLayout class="app-title" background="white" orientation="horizontal"
     ios:horizontalAlignment="center"
     android:horizontalAlignment="left">
-    <Image src="~/assets/cropped-logo.png" class="action-image"></Image>
+    <Image src="~/assets/cropped_logo.png" class="action-image"></Image>
     <Label text="ativeScript"  class="action-label"></Label>
   </StackLayout>
 </ActionBar>
