--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -15,7 +15,7 @@
             (tap)="openCamera($event)"
             (onLongPress)="clearPhotosArray()"
             width="100%"
-            text="Add Photo"
+            text="Report"
             clearHistory="true">
         </Button>
     </StackLayout>
