add heat button

--- a/src/app/views/details/details.component.css
+++ b/src/app/views/details/details.component.css
@@ -3,8 +3,13 @@
     background: #38b6ff;
 }
 
-.cancel-btn, .good-btn, .bad-btn {
-    width: 33%;
+.cancel-btn {
+    color: #555;
+    width: 30%;
+}
+
+.good-btn, .bad-btn {
+    width: 35%;
     color: white;
 }
 
