--- a/src/app/views/details/details.component.html
+++ b/src/app/views/details/details.component.html
@@ -5,9 +5,9 @@
             <ns-photo-card [photoId]="photoId"></ns-photo-card>
         </GridLayout>
         <StackLayout row="1" orientation="horizontal">
-            <Button text="Cancel" class="cancel-btn" (tap)="cancel()"></Button>
-            <Button text="Bad!" class="bad-btn" (tap)="ratePhoto(0)"></Button>
-            <Button text="Good!" class="good-btn" (tap)="ratePhoto(1)"></Button>
+            <Button text="Cancel" width="30%" class="cancel-btn" (tap)="cancel()"></Button>
+            <Button text="Bad!" width="35%" class="bad-btn" (tap)="ratePhoto(0)"></Button>
+            <Button text="Good!" width="35%" class="good-btn" (tap)="ratePhoto(1)"></Button>
         </StackLayout>
     </GridLayout>
 </ScrollView>
