--- a/src/app/views/map/map.component.html
+++ b/src/app/views/map/map.component.html
@@ -1,4 +1,5 @@
 <ns-action-bar></ns-action-bar>
+<Label *ngIf="configurationService.demoMode" text="Demo Mode"></Label>
 <GridLayout rows="*,60">
     <MapView row="0" #mapView [latitude]="currentLat" [longitude]="currentLng"
              [zoom]="zoom" [minZoom]="minZoom" [maxZoom]="maxZoom" [bearing]="bearing"
@@ -15,6 +16,7 @@
             class="cancel-btn"
             width="30%"
             (tap)="visualize()"
+            (onLongPress)="toggleDemoMode()"
             text="Heat"
             clearHistory="true">
         </Button>
